<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/sem_sinal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/sem_sinal" />

    <Button
        android:id="@+id/btMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_mapa" />

    <Button
        android:id="@+id/btEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_endere_o" />

    <Button
        android:id="@+id/btImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_imagem" />

    <ImageView
        android:id="@+id/ivMapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/ver_imagem" />

</LinearLayout>